Use important to ensure highlight visibility
- Highlights were not showing up on certain EPub documents, due to the document’s usage of important

--- a/src/styles/annotator/inject.scss
+++ b/src/styles/annotator/inject.scss
@@ -8,7 +8,8 @@ $base-font-size: 14px;
 //HIGHLIGHTS////////////////////////////////
 .annotator-highlights-always-on {
   .annotator-hl {
-    background-color: $highlight-color;
+    // !important is used to override other !importants that are out of our control
+    background-color: $highlight-color !important;
 
     // cursor pointer gives mobile devices click
     // event support. Using the pointer:coarse gives
@@ -19,19 +20,19 @@ $base-font-size: 14px;
   }
 
   .annotator-hl .annotator-hl {
-    background-color: $highlight-color-second;
+    background-color: $highlight-color-second !important;
   }
 
   .annotator-hl .annotator-hl .annotator-hl {
-    background-color: $highlight-color-third;
+    background-color: $highlight-color-third !important;
   }
-}
 
-.annotator-hl.annotator-hl-focused {
-  background-color: $highlight-color-focus !important;
+  .annotator-hl.annotator-hl-focused {
+    background-color: $highlight-color-focus !important;
 
-  .annotator-hl {
-    background-color: transparent !important;
+    .annotator-hl {
+      background-color: transparent !important;
+    }
   }
 }
 
